# SkillRQ

./: .gitignore  README.md  pyproject.toml
configs/: paths.yaml
data/: README.md
docs/: CAPABILITY_DATA_REPORT.md  EXECUTION_PLAN.md  M5_UPDATE.md  PROCESSED_DATA_REPORT.md  PROJECT_STRUCTURE.md  SERVER_UPLOAD_AND_TRAINING.md
reports/code_cards/: api_bank_code_cards.md  m3_codebook_summary.json  skillret_code_cards.md  toolbench_code_cards.md
reports/data_stats/: api_bank_stats.json  skillret_stats.json  skillrouter_stats.json  toolbench_stats.json
reports/tables/: m4_capabilityrq_capability_metrics.json  m7_joint_base.json  m7_shared_encoder.json  m7_shared_encoder_soft_code.json  m7_soft_code_distribution.json  m7_tool_reranking.json
scripts/: build_capability_data.py  build_processed_data.py  diagnose_m4_m5_candidate_reuse.py  diagnose_m5_codepath_to_candidate.py  diagnose_m5_nested_candidates.py  run_m7_joint_ablations.sh  write_capability_data_report.py
skillrq/: __init__.py  __main__.py  cli.py  splits.py
skillrq/agent_sim/: __init__.py  evaluate.py  simulator.py  vllm_runner.py
skillrq/capability/: __init__.py  build.py  ids.py  schema.py
skillrq/codebook/: __init__.py  assign.py  (+4 more)
tests/: test_agent_sim.py  test_agent_sim_vllm.py  test_capability_normalization.py  test_cli.py  test_codebook_m3.py  test_config.py  test_diagnostics.py  test_m4_data.py  test_m4_soft.py  test_m5_code_plan.py  test_m5_residual_selector.py  test_m7_reranker.py  test_prompting.py  test_retrieval_baselines.py  test_sequence_split.py  test_skillret_normalization.py
(+73 files in other folders)
