[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillrq"
version = "0.1.0"
description = "Capability Recommendation for LLM Agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
train = [
  "torch>=2.2",
  "swanlab>=0.4",
]

[project.scripts]
skillrq = "skillrq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillrq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
